[package]
name = "nodejs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
github = { path = "../github" }
license = { path = "../license" }
md-writer = { git = "https://github.com/jbenner-radham/md-writer-rs" }
readme = { path = "../readme" }
serde_json = "1.0.91"
titlecase = "2.2.1"
