[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
github = { path = "../github" }
md-writer = { git = "https://github.com/jbenner-radham/md-writer-rs" }
readme = { path = "../readme" }
toml = "0.7.0"
